--- a/main.html
+++ b/main.html
@@ -8,6 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		
+		<th>
+			<th>Item</th>
+			<td><th>Price</th></td>
+			<td><th>Quantity</th></td>
+		</th>
+		
+		<tr>
+			<th>Banana</th>
+			<td>&#8377;1.00</td>
+			<td>3</td>
+		</tr>
+		
+		<tr>
+			<th>Burger</th>
+			<td>&#8377;6.90</td>
+			<td>1</td>
+		</tr>
+		<tr>
+			<th>Cookie</th>
+			<td>&#8377;4.20</td>
+			<td>4</td>
+		</tr>
+		
+		<tr>
+			<th>Total</th>
+			<td>&#8377;12.10</td>
+			<td>8</td>
+		</tr>
+		
+	</table>
+	
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
