--- a/main.html
+++ b/main.html
@@ -10,42 +10,40 @@
 	<!-- the entire body must be written by student -->
 	<table>
 		
-		<th>
-			<th>Item</th>
-			<td><th>Price</th></td>
-			<td><th>Quantity</th></td>
-		</th>
+		<thead>
+			<th>
+				<th>Item</th>
+				<th>Price</th>
+				<th>Quantity</th>
+			</th>
+		</thead>
 		
-		<tr>
-			<th>Banana</th>
-			<td>&#8377;1.00</td>
-			<td>3</td>
-		</tr>
-		
-		<tr>
-			<th>Burger</th>
-			<td>&#8377;6.90</td>
-			<td>1</td>
-		</tr>
-		<tr>
-			<th>Cookie</th>
-			<td>&#8377;4.20</td>
-			<td>4</td>
-		</tr>
-		
-		<tr>
-			<th>Total</th>
-			<td>&#8377;12.10</td>
-			<td>8</td>
-		</tr>
+		<tbody>
+			<tr>
+				<td><th>Banana</th></td>
+				<td>&#8377;1.00</td>
+				<td>3</td>
+			</tr>
+			
+			<tr>
+				<td><th>Burger</th></td>
+				<td>&#8377;6.90</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td><th>Cookie</th></td>
+				<td>&#8377;4.20</td>
+				<td>4</td>
+			</tr>
+			
+			<tr>
+				<td><th>Total</th></td>
+				<td>&#8377;12.10</td>
+				<td>8</td>
+			</tr>
+		</tbody>
 		
 	</table>
-	
-
-
-
-
-
 	
     <script type="text/javascript" src="./script.js">
 </script>
