--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 			</th>
 		</thead>
 		
-		<tbody>
+<!-- 		<tbody> -->
 			<tr>
 				<td><th>Banana</th></td>
 				<td>&#8377;1.00</td>
@@ -41,7 +41,7 @@
 				<td>&#8377;12.10</td>
 				<td>8</td>
 			</tr>
-		</tbody>
+<!-- 		</tbody> -->
 		
 	</table>
 	
