--- a/main.html
+++ b/main.html
@@ -20,24 +20,23 @@
 		
 <!-- 		<tbody> -->
 			<tr>
-				<td><th>Banana</th></td>
+				<th>Banana</th>
 				<td>&#8377;1.00</td>
 				<td>3</td>
 			</tr>
-			
 			<tr>
-				<td><th>Burger</th></td>
+				<th>Burger</th>
 				<td>&#8377;6.90</td>
 				<td>1</td>
 			</tr>
 			<tr>
-				<td><th>Cookie</th></td>
+				<th>Cookie</th>
 				<td>&#8377;4.20</td>
 				<td>4</td>
 			</tr>
 			
 			<tr>
-				<td><th>Total</th></td>
+				<th>Total</th>
 				<td>&#8377;12.10</td>
 				<td>8</td>
 			</tr>
